--- a/angularjs-sample/material/radiobutton.html
+++ b/angularjs-sample/material/radiobutton.html
@@ -21,7 +21,7 @@
 
     myApp.controller('MainCtrl', ['$scope', '$mdDialog', function ($scope, $mdDialog) {
         $scope.user = {
-            fruit : ''
+            fruit : 'Apple'
         };
     }]);
   </script>
