--- a/sweet-alertjs-sample/sweetalertjs.html
+++ b/sweet-alertjs-sample/sweetalertjs.html
@@ -24,6 +24,8 @@
                 text: "Here's my info message!",
                 type: "info",
                 confirmButtonText: "확인"
+            }, function(data) {
+                console.log('ok');
             });
         }
         
