--- a/angularjs-sample/http.promise.html
+++ b/angularjs-sample/http.promise.html
@@ -3,10 +3,10 @@
 <head>
 <title>AngularJS with Promise</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+<link rel="stylesheet" href="css/bootstrap/v3.1.1/bootstrap.min.css">
+<script src="js/jquery/v1.11.1/jquery.min.js"></script>
+<script src="js/bootstrap/v3.1.1/bootstrap.min.js"></script>
+<script src="js/angularjs/v1.4.9/angular.min.js"></script>
 <script type="text/javascript">
     var myApp = angular.module('myApp', []);
     myApp.controller('PromiseController', ['$scope', '$http', function ($scope, $http) {
