--- a/angularjs-sample/service.html
+++ b/angularjs-sample/service.html
@@ -38,13 +38,16 @@
         };
     });
     
+    /*
     myApp.service('Math', function() {
         this.multiply = function(x, y) {
             return x * y;
         };
     });
+    */
 
 </script>
+<script src="math_service.js"></script>
 </head>
 <body>
     <div ng-app="myApp">
