--- a/sweet-alertjs-sample/sweetalertjs.html
+++ b/sweet-alertjs-sample/sweetalertjs.html
@@ -67,6 +67,27 @@
             });
         }
         
+        function onClickConfirm() {
+            swal({
+                    title: "Are you sure?",
+                    text: "You will not be able to recover this imaginary file!",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: 'btn-danger',
+                    confirmButtonText: 'Yes, delete it!',
+                    cancelButtonText: "No, cancel plx!",
+                    closeOnConfirm: false,
+                    closeOnCancel: false
+                },
+                function (isConfirm) {
+                    if (isConfirm) {
+                        swal("Deleted!", "Your imaginary file has been deleted!", "success");
+                    } else {
+                        swal("Cancelled", "Your imaginary file is safe :)", "error");
+                    }
+            });
+        }
+        
         function onClickHtmlAlert() {
             swal({
                 title: "HTML <small>Title</small>!",
@@ -89,6 +110,7 @@
     <button onclick="onClickAutoCloseAlert()">auto close alert</button><br/>
     <button onclick="onClickCustomIconAlert()">custom icon alert</button><br/>
     <button onclick="onClickHtmlAlert()">html alert</button><br/>
+    <button onclick="onClickConfirm()">confirm alert</button><br/>
 </body>
 </html>
 
