--- a/vue-sample/render.html
+++ b/vue-sample/render.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <div id="app">
+        <!-- 엘리먼트 속성 바인딩 -->
         <h1 v-bind:title="msg">{{msg}}</h1>
         <h1 v-if="seen">toggle text</h1>
         
