--- a/vue-sample/directive.html
+++ b/vue-sample/directive.html
@@ -1,9 +1,14 @@
 <html>
 <head>
-    <meta charset="utf-8">
+<meta charset="utf-8">
+<style>
+[v-cloak] {
+    display: none;
+}
+</style>
 </head>
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <!-- html이 그대로 표시 -->
         <h1 v-text="hello"></h1>
         
@@ -15,6 +20,16 @@
 
         <!-- v-show 속성이 false이면 화면에 표시안됨 -->
         <h1 v-show="visible">js</h1>
+
+        <h1 v-if="value > 5">value가 5보다 크면 표시됨.</h1>
+        <h1 v-else-if="value === 5">value가 5이면 표시됨.</h1>
+        <h1 v-else>value가 5보다 작으면 표시됨.</h1>
+
+        <!-- v-pre 속성은 랜더링을 건너띔. -->
+        <h1 v-pre>{{ 이건 그대로 표시됨. }} </h1>
+
+        <!-- 머스태쉬 태그로 값을 표시 -->
+        <h1>{{ "value : " + value }} </h1>
     </div>
 
     <script src="static/vue.min.js"></script>
@@ -25,7 +40,8 @@
         data: {
             hello: "<i>hello<i>",   
             world: "<i>world<i>",
-            visible: true
+            visible: true,
+            value: 6
         },        
         methods: {
             
