--- a/bootstrap-sample/dropdownmenu.html
+++ b/bootstrap-sample/dropdownmenu.html
@@ -25,28 +25,21 @@
 
 </head>
 <body>
-    <div class='container'>
-    <li class="dropdown" id='portal'>
-        <a class="dropdown-toggle" data-toggle="dropdown" href="/searchStatistics">포털사이트<span class="caret"></span></a>
+    <button class="dropdown" id='portal'>
+        <a class="dropdown-toggle" data-toggle="dropdown">포털사이트<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a href="http://www.naver.com">네이버</a></li>
             <li><a href="http://www.daum.net">다음</a></li>
         </ul>
-    </li>
-    </div>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <div class='container'>
-    <li class="dropdown" id='search'>
-        <a class="dropdown-toggle" data-toggle="dropdown" href="/searchStatistics">검색사이트<span class="caret"></span></a>
+    </button>
+    
+    <button class="dropdown" id='search'>
+        <a class="dropdown-toggle" data-toggle="dropdown">검색사이트<span class="caret"></span></a>
         <ul class="dropdown-menu">
-            <li><a href="http://www.google.co.kr">google</a></li>        
+            <li><a href="http://www.google.co.kr">google</a></li>
+            <li><a href="http://www.bing.com">bing</a></li>
         </ul>
-    </li>
-    </div>
+    </button>
 </body>
 </html>
 
