--- a/bootstrap-sample/dropdownmenu.html
+++ b/bootstrap-sample/dropdownmenu.html
@@ -6,10 +6,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Bootstrap Dropdown Menu</title>
 
+<style type="text/css">
+<!--
+스타일 시트를 사용하여 마우스 Hover시 메뉴 펼치기
+@media (min-width: 768px) {
+    .dropdown:hover .dropdown-menu {
+        display: block;
+    }
+}
+-->
+</style>
+
 <link rel="stylesheet" href="static/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="static/jquery/3.1.1/js/jquery.min.js"></script>
 <script src="static/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript">
+
 
     $(document).ready(function () {
         $('.dropdown').hover(function() {
