--- a/vue-sample/http-get.html
+++ b/vue-sample/http-get.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -9,8 +10,11 @@
 </head>
 <body>
   <div id="app" v-cloak>
-    <span>{{myip}} </span>
     <button @click="onClickIP">IP 조회</button>
+    <br/>
+    <span>{{myip}}</span>
+    <br/>
+    <span>{{uuid}}</span>
   </div>
 
   <script src="static/moment.min.js"></script>
@@ -22,16 +26,45 @@
   var app = new Vue({
     el: "#app",
     data: {
-      myip: ''
+      myip: '',
+      uuid: ''
     },
     methods: {
-    
+      onSuccessGetIP: function(response) {
+        this.myip = response.body.origin;
+        console.log('first : ' + JSON.stringify(response.body));
+        return this.$http.get('https://httpbin.org/uuid');
+      },
+      onErrorGetIP: function(response) {
+        console.log('fail to get my ip' + JSON.stringify(response));
+      },
+      onSuccessGetUUID: function(response) {
+        this.uuid = response.body.uuid;
+        console.log('second : ' + JSON.stringify(response.body));
+      },
+      onErrorGetUUID: function(response) {
+        console.log('fail to get uuid' + JSON.stringify(response));
+      },
       onClickIP: function() {
+        this.$http.get('https://httpbin.org/ip')
+        .then(this.onSuccessGetIP, this.onErrorGetIP)
+        .then(this.onSuccessGetUUID, this.onErrorGetUUID);
+
+        /*
+        또는 promise를 지원하면 다음과 같이 사용할 수 있음.
         return this.$http.get('https://httpbin.org/ip').then(response => {
           this.myip = response.body.origin;
+          console.log('first : ' + JSON.stringify(response.body));
+          return this.$http.get('https://httpbin.org/uuid');
         }, response => {
-          alert('fail to get my ip');
+          console.log('fail to get my ip' + JSON.stringify(response));
+        }).then(response => {
+          this.uuid = response.body.uuid;
+          console.log('second : ' + JSON.stringify(response.body));
+        }, response => {
+          console.log('fail to get uuid' + JSON.stringify(response));
         });
+        */
       }
     }
   });
