--- a/slideout-sample/main.html
+++ b/slideout-sample/main.html
@@ -9,39 +9,68 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <style>
-      body {
-        width: 100%;
-        height: 100%;
-      }
+    .slideout-menu {
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 0;
+      width: 256px;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      display: none;
+    }
 
-      .slideout-menu {
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        z-index: 0;
-        width: 256px;
-        overflow-y: scroll;
-        -webkit-overflow-scrolling: touch;
-        display: none;
-      }
+    .slideout-panel {
+      position: relative;
+      z-index: 1;
+      will-change: transform;
+    }
 
-      .slideout-panel {
-        position: relative;
-        z-index: 1;
-        will-change: transform;
-      }
+    .slideout-open,
+    .slideout-open body,
+    .slideout-open .slideout-panel {
+      overflow: hidden;
+    }
 
-      .slideout-open,
-      .slideout-open body,
-      .slideout-open .slideout-panel {
-        overflow: hidden;
-      }
+    .slideout-open .slideout-menu {
+      display: block;
+    }
 
-      .slideout-open .slideout-menu {
-        display: block;
-      }
+    html,
+    body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    nav {
+      background: #000;
+      color: #fff;
+    }
+
+    main {
+      background: #eee;
+      min-height: 100%;
+    }
+
+    header {
+      position: fixed;
+      width: 100%;
+      z-index: 10;
+    }
+
+    .fixed {
+      backface-visibility: hidden;
+      position: fixed;
+      z-index:2;
+      transition: transform 300ms ease;
+    }
+
+    .fixed-open {
+      transform: translate3d(256px, 0px, 0px);
+    }
     </style>
   </head>
   <body>
@@ -53,7 +82,6 @@
     <main id="panel">
       <header>
         <button class="toggle-button">☰</button>
-        <h2>Panel</h2>
       </header>
     </main>
 
@@ -62,7 +90,7 @@
       var slideout = new Slideout({
         'panel': document.getElementById('panel'),
         'menu': document.getElementById('menu'),
-        'padding': 256,
+        'padding': 0,
         'tolerance': 70
       });
 
