--- a/spring-sample/ExJSP/src/main/webapp/WEB-INF/pages/test.html
+++ b/spring-sample/ExJSP/src/main/webapp/WEB-INF/pages/test.html
@@ -32,8 +32,8 @@
     },
     methods: {
       onClickIP: function() {
-        axios.post('/save2',
-            "result=mbc&name=test"
+        axios.post('/put',
+            "name=mbc&age=123"
         , {
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded',
